Fixes spacing in the footer

--- a/static/style.css
+++ b/static/style.css
@@ -302,7 +302,7 @@ footer {
   }
 
   #credit-container {
-    margin-top: 100px;
+    margin-top: 125px;
   }
 
   #key-points-table div {
